// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`redux reducers returns initial state when action type is unrecognized 1`] = `
Object {
  "stops": Array [
    Object {
      "address": "test123",
      "complete": false,
      "id": 1,
      "name": "test",
    },
  ],
}
`;

exports[`redux reducers returns the correct state when CREATE_STOP is reduced 1`] = `
Object {
  "stops": Object {
    "0": Object {
      "address": "test123",
      "complete": false,
      "id": 1,
      "name": "test",
    },
    "address": "test123",
    "id": "testtest1",
    "name": "test",
  },
}
`;

exports[`redux reducers returns the correct state when DELETE_STOP is reduced 1`] = `
Object {
  "stops": Object {
    "0": Object {
      "address": "test123",
      "complete": false,
      "id": 1,
      "name": "test",
    },
  },
}
`;

exports[`redux reducers returns the correct state when EDIT_STOP_COMPLETION is reduced 1`] = `
Object {
  "0": Object {
    "address": "test123",
    "complete": false,
    "id": 1,
    "name": "test",
  },
  "stops": Array [
    Object {
      "address": "test123",
      "complete": false,
      "id": 1,
      "name": "test",
    },
  ],
}
`;

exports[`redux reducers returns the correct state when SELECT_ITEM is reduced 1`] = `
Object {
  "stops": Array [
    Object {
      "address": "test123",
      "complete": false,
      "id": 1,
      "name": "test",
    },
  ],
}
`;

exports[`redux reducers returns the correct state when UPDATE_STOP is reduced 1`] = `
Object {
  "0": Object {
    "address": "test123",
    "complete": false,
    "id": 1,
    "name": "test",
  },
  "stops": Array [
    Object {
      "address": "test123",
      "complete": false,
      "id": 1,
      "name": "test",
    },
  ],
}
`;
